--- a/backend/UsersMicroservice/build.gradle
+++ b/backend/UsersMicroservice/build.gradle
@@ -21,10 +21,15 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2023.0.1")
+}
+
 def grpcVersion = '1.62.2'
 def protobufVersion = '3.25.1'
 
 dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -39,6 +44,7 @@ dependencies {
     implementation group: 'io.grpc', name: 'grpc-stub', version: '1.62.2'
     implementation group: 'io.grpc', name: 'grpc-protobuf', version: '1.62.2'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
@@ -50,6 +56,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 tasks.named('test') {
