--- a/backend/config-server/src/main/resources/application.yml
+++ b/backend/config-server/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 server:
   port: 1901
-
 spring:
   cloud:
     config:
       server:
         git:
-          default-label: config-server
+          default-label: main
           uri: https://github.com/LuisF-1995/aquiles
+          search-paths: config-services
+  application:
+    name: config-server
