--- a/backend/aquiles-users/build.gradle
+++ b/backend/aquiles-users/build.gradle
@@ -29,7 +29,6 @@ def grpcVersion = '1.62.2'
 def protobufVersion = '3.25.1'
 
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -41,10 +40,9 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.4.0'
     //implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.10.0'
     //implementation group: 'org.flywaydb', name: 'flyway-mysql', version: '10.10.0'
-    implementation group: 'io.grpc', name: 'grpc-stub', version: '1.62.2'
-    implementation group: 'io.grpc', name: 'grpc-protobuf', version: '1.62.2'
+    //implementation group: 'io.grpc', name: 'grpc-stub', version: '1.62.2'
+    //implementation group: 'io.grpc', name: 'grpc-protobuf', version: '1.62.2'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
