--- a/Frontend/aquiles/public/manifest.json
+++ b/Frontend/aquiles/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Aquiles app",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "aquiles.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
